@@ -6,7 +6,7 @@ If you are working or plan to work on a task here put your name by it.
 Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Make sure partitioning somewhat works. (agaffney)
-		
+		rewrite install_filesystem_tools()
 	DialogFE:
 		update partitioning stuff (agaffney) (sorry)
 	gtkFE:
