@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.76 2005/03/01 17:29:19 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.77 2005/03/01 18:05:49 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   1 Mar 2005; Preston Cody <codeman@gentoo.org>
   Fixed a bunch of true -> True typos. lots of em
+  only write new resolv.conf if there are dns servers listed.
   
   1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Commented out 'display_on_tty8=True' in start_portmap()
